@@ -4,7 +4,7 @@
 
 use strict;
 use lib $ENV{PERL_CORE} ? '../lib/Module/Build/t/lib' : 't/lib';
-use MBTest tests => 11;
+use MBTest tests => 10;
 
 use Cwd ();
 my $cwd = Cwd::cwd;
@@ -45,9 +45,6 @@ sub run_sample {
 
     $mb = run_sample( install_base => '~/foo' );
     is( $mb->install_base,      "$ENV{HOME}/foo" );
-
-    $mb = run_sample( install_base => '~~' );
-    is( $mb->install_base,      '~~' );
 
     $mb = run_sample( install_base => 'foo~' );
     is( $mb->install_base,      'foo~' );
